--- a/kangaroo-microservices-provider-core/pom.xml
+++ b/kangaroo-microservices-provider-core/pom.xml
@@ -2,7 +2,6 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.kangaroo</groupId>
   <artifactId>kangaroo-microservices-provider-core</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>jar</packaging>
@@ -97,6 +96,17 @@
 			<scope>provided</scope>
 		</dependency>
 	</dependencies>
+	
+	<build>
+        <testResources>
+            <testResource>
+                <directory>src/test/resources</directory>
+            </testResource>
+            <testResource>
+                <directory>src/test/java</directory>
+            </testResource>
+        </testResources>
+    </build>
 
   <repositories>
 		<repository>
