--- a/kangaroo-utils/pom.xml
+++ b/kangaroo-utils/pom.xml
@@ -90,6 +90,17 @@
 		</dependency>
   </dependencies>
   
+  <build>
+		<testResources>
+			<testResource>
+				<directory>src/test/resources</directory>
+			</testResource>
+			<testResource>
+				<directory>src/test/java</directory>
+			</testResource>
+		</testResources>
+	</build>
+  
   <repositories>
 		<repository>
 			<snapshots>
