--- a/kangaroo-core/pom.xml
+++ b/kangaroo-core/pom.xml
@@ -14,6 +14,16 @@
   <name>kangaroo-core</name>
   <url>http://maven.apache.org</url>
 
+<build>
+		<testResources>
+			<testResource>
+				<directory>src/test/resources</directory>
+			</testResource>
+			<testResource>
+				<directory>src/test/java</directory>
+			</testResource>
+		</testResources>
+	</build>
 
   <repositories>
 		<repository>
