--- a/kangaroo-microservices-base/kangaroo-microservices-provider-base/src/test/resources/mybatis-generate-master.properties
+++ b/kangaroo-microservices-base/kangaroo-microservices-provider-base/src/test/resources/mybatis-generate-master.properties
@@ -12,4 +12,4 @@ mybatis.mapperXml.path=src/test/resources
 mybatis.mapper.package=com.kangaroo.microservices.provider.base.dao.master
 mybatis.mapper.path=src/test/java
 
-table.name=Users
+table.name=Product
