--- a/kangaroo-microservices-base/kangaroo-microservices-provider-base/src/test/resources/mybatis-generate-master.properties
+++ b/kangaroo-microservices-base/kangaroo-microservices-provider-base/src/test/resources/mybatis-generate-master.properties
@@ -12,4 +12,10 @@ mybatis.mapperXml.path=src/test/resources
 mybatis.mapper.package=com.kangaroo.microservices.provider.base.dao.master
 mybatis.mapper.path=src/test/java
 
+mybatis.repository.interface.package=com.kangaroo.microservices.provider.base.repository.master
+mybatis.repository.implementation.package=com.kangaroo.microservices.provider.base.repository.master.impl
+mybatis.repository.interfaces=com.kangaroo.microservices.provider.core.repository.BaseRepository
+mybatis.repository.implementations=com.kangaroo.microservices.provider.core.repository.impl.BaseRepositoryImpl
+mybatis.repository.path=src/test/java
+
 table.name=Product
