--- a/kangaroo-microservices-base/kangaroo-microservices-provider-base/src/test/resources/mybatis-generate-master.properties
+++ b/kangaroo-microservices-base/kangaroo-microservices-provider-base/src/test/resources/mybatis-generate-master.properties
@@ -18,4 +18,4 @@ mybatis.repository.interfaces=com.kangaroo.microservices.provider.core.repositor
 mybatis.repository.implementations=com.kangaroo.microservices.provider.core.repository.impl.BaseRepositoryImpl
 mybatis.repository.path=src/test/java
 
-table.name=Product
+table.name=Store
