--- a/kangaroo-microservices-base/kangaroo-microservices-provider-base/pom.xml
+++ b/kangaroo-microservices-base/kangaroo-microservices-provider-base/pom.xml
@@ -114,7 +114,12 @@
 			<groupId>net.logstash.logback</groupId>
 			<artifactId>logstash-logback-encoder</artifactId>
 		</dependency>
-		
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-configuration-processor</artifactId>
+			<optional>true</optional>
+		</dependency>
   </dependencies>
   <build>
 		<plugins>
