--- a/kangaroo-microservices-base/kangaroo-microservices-provider-base/src/main/resources/bootstrap-native.properties
+++ b/kangaroo-microservices-base/kangaroo-microservices-provider-base/src/main/resources/bootstrap-native.properties
@@ -10,9 +10,9 @@ logging.level.com.kangaroo.microservices.provider.base.dao=debug
 logging.level.tk.mybatis=debug
 
 
-spring.master.url=jdbc:mysql://192.168.10.200:3306/vxiaoke?useUnicode=true&amp;characterEncoding=UTF-8&allowMultiQueries=true
-spring.master.username=vxiaoke
-spring.master.password=Chinaxj001
+spring.master.url=jdbc:mysql://localhost:3306/vxiaoke?useUnicode=true&amp;characterEncoding=UTF-8&allowMultiQueries=true
+spring.master.username=root
+spring.master.password=root
 spring.master.initialSize=5
 spring.master.minIdle=5
 spring.master.maxActive=20
